--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,4 +7,4 @@ spring.datasource.password=
 #H2 DB \uBC29\uC5B8\uC124\uC815
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
